# crystal_clear_code

./: README.md
sat_solver_cpp/dpll_version1/: main.cpp
sat_solver_cpp/dpll_version2/: CMakeLists.txt  README.md
sat_solver_cpp/dpll_version2/resources/: test_cleanup.dimacs
sat_solver_cpp/dpll_version2/src/: dpll.cpp
sat_solver_cpp/dpll_version3/: LICENSE
sat_solver_cpp/dpll_version3/CMakeModules/: CompilerSettings.cmake
sat_solver_cpp/dpll_version3/include/sat_solver_cpp/: dpll.hpp
sat_solver_cpp/dpll_version3/resources/: test2.dimacs  test_unit_prop.dimacs
sat_solver_cpp/dpll_version3/scripts/: main.cpp
